--- a/BankAccounts/BankAccounts.vbproj
+++ b/BankAccounts/BankAccounts.vbproj
@@ -69,7 +69,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BankAccount.vb" />
+    <Compile Include="BankAcct.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
